# ICP-Ceres-Solver

./: .gitignore  CMakeLists.txt  README.md
data/: source_aligned.pcd
include/: cost_function.hpp
src/: main.cpp  plane_fitting.cpp  point_to_plane_residual.cpp
